Server: CMake memory footprint regressed significantly in CMake 3.10.0
CMake's memory consumption regressed significantly in CMake 3.10 when configuring our project in QtCreator:
CMake 3.9.6: 220MB / 200MB (max/final)
CMake 3.10-rc1: 1400MB / 250MB (max/final)
Memory rises from 200MB to 1400MB after the "generating done" message appears.
This is when unit tests are not built. If I enable unit tests in our project, the configuration will fail at 2.8GB mem usage. Our project is structured similarly to the attached sample project.
This is a duplicate of https://bugreports.qt.io/browse/QTCREATORBUG-19342
Edited by Brad King